# C-Compiler

./: CMakeLists.txt  Emit.cpp  Emit.h  LICENSE.md  Parser.cpp  Parser.h  README.md  Scanner.cpp  Scanner.h  Tokens.h  main.cpp
AST/: BinaryExprAST.cpp  BinaryExprAST.h  CallExprAST.cpp  CallExprAST.h  ExprAST.cpp  ExprAST.h  FunctionAST.cpp  FunctionAST.h  IdentifierExprAST.cpp  IdentifierExprAST.h  IfExprAST.cpp  IfExprAST.h  NopExprAST.cpp  NopExprAST.h  NumberExprAST.cpp  NumberExprAST.h  PrintExprAST.cpp  PrintExprAST.h  PrototypeAST.cpp  PrototypeAST.h  ReturnExprAST.cpp  ReturnExprAST.h  VariableExprAST.cpp  VariableExprAST.h  WhileExprAST.cpp  WhileExprAST.h
TestCases/: Error-Identifier.sc  Error-If-While-SimpleNesting.sc  FunctionStatement-Nested1Level.sc  FunctionStatement-Nested2Level.sc  If-While-SimpleNesting.sc  IfStatement-Nested1Level-WithElse.sc  IfStatement-Nested1Level.sc  IfStatement-Simple.sc  IfStatement-WithElse.sc  PrintfStatement.sc  While-If-SimpleNesting.sc  WhileStatementSimple.sc
